sauvegarde locale avant mise à jour

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Poppins', sans-serif;
-      background: radial-gradient(circle at top, #021427, #000);
+      background: radial-gradient(circle at top, #010d1f, #000);
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -19,17 +19,17 @@
       justify-content: center;
       height: 100vh;
       text-align: center;
-      transition: all 0.3s ease;
+      overflow: hidden;
     }
 
     .card {
       background: rgba(255, 255, 255, 0.05);
       padding: 40px 30px;
       border-radius: 20px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 0 30px rgba(0, 162, 255, 0.2);
       width: 90%;
       max-width: 380px;
-      backdrop-filter: blur(8px);
+      backdrop-filter: blur(10px);
       animation: fadeIn 1s ease-in-out;
     }
 
@@ -44,14 +44,15 @@
       border-radius: 50%;
       background: url('abdou.png') no-repeat center/cover;
       margin: 0 auto 15px;
-      border: 3px solid #0a84ff;
-      box-shadow: 0 0 20px #0a84ff55;
+      border: 3px solid #00aaff;
+      box-shadow: 0 0 25px #00aaff;
     }
 
     h2 {
       margin: 5px 0;
       font-size: 1.8em;
       font-weight: 600;
+      text-shadow: 0 0 8px #00aaff;
     }
 
     p {
@@ -60,22 +61,27 @@
       margin-bottom: 25px;
     }
 
-    a {
+    a, button {
       display: block;
-      background: #0a84ff;
+      background: transparent;
+      border: 2px solid #00aaff;
       margin: 12px auto;
       padding: 12px;
       width: 220px;
       border-radius: 25px;
-      color: white;
+      color: #00aaff;
       text-decoration: none;
       font-weight: 600;
       letter-spacing: 0.5px;
       transition: all 0.3s ease;
+      box-shadow: 0 0 12px #00aaff33;
+      cursor: pointer;
     }
 
-    a:hover {
-      background: #0072e3;
+    a:hover, button:hover {
+      background: #00aaff;
+      color: white;
+      box-shadow: 0 0 20px #00aaff, 0 0 40px #00aaff66;
       transform: scale(1.05);
     }
 
@@ -85,24 +91,17 @@
       color: #777;
     }
 
-    select {
-      background: #0a84ff;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 15px;
-      font-weight: 600;
-      margin-top: 15px;
-      cursor: pointer;
-    }
-
-    #about {
+    #apropos {
+      display: none;
       margin-top: 20px;
+      background: rgba(0, 0, 0, 0.4);
+      border-radius: 12px;
+      padding: 15px;
+      border: 1px solid #00aaff33;
       font-size: 0.9em;
-      color: #ccc;
-      background: rgba(255,255,255,0.05);
-      padding: 10px;
-      border-radius: 10px;
+      color: #cfdfff;
+      text-align: left;
+      box-shadow: 0 0 20px #00aaff22 inset;
     }
   </style>
 </head>
@@ -110,55 +109,33 @@
 
   <div class="card">
     <div class="avatar"></div>
-    <h2 id="name">Abdellvh Ben</h2>
-    <p id="subtitle">Choisissez une méthode — je réponds vite.</p>
+    <h2>Abdellvh Ben</h2>
+    <p>Choisissez une méthode — je réponds vite.</p>
 
     <a href="mailto:abdellahbensalem59@gmail.com">📧 Email</a>
     <a href="https://wa.me/213660922837">💬 WhatsApp</a>
     <a href="https://t.me/abdellahbensalem">📨 Telegram</a>
+    <a href="https://instagram.com/abdlvlh" target="_blank">📷 Instagram</a>
 
-    <select id="lang">
-      <option value="fr">Français</option>
-      <option value="en">English</option>
-      <option value="ar">العربية</option>
-    </select>
+    <button onclick="toggleInfo()">ℹ️ À propos de moi</button>
 
-    <div id="about">
-      <strong>À propos de moi :</strong><br>
-      Je suis <b>Abdellah Bensalem</b>, étudiant en informatique à l’USTHB, spécialisé en base de données,
-      développeur web et coach sportif (musculation). Passionné et professionnel.
+    <div id="apropos">
+      <strong>Je suis Abdellah Bensalem</strong> — étudiant en informatique (spécialité base de données), développeur web, coach sportif en musculation, et passionné de technologie.  
+      <br><br>
+      Mon objectif est d’allier <em>performance, esthétique et innovation</em> dans tout ce que je crée.
     </div>
   </div>
 
   <footer>© 2025 Abdellvh Ben — Tous droits réservés</footer>
 
   <script>
-    const langSelect = document.getElementById('lang');
-    const subtitle = document.getElementById('subtitle');
-    const about = document.getElementById('about');
-
-    const translations = {
-      fr: {
-        subtitle: "Choisissez une méthode — je réponds vite.",
-        about: "Je suis <b>Abdellah Bensalem</b>, étudiant en informatique à l’USTHB, spécialisé en base de données, développeur web et coach sportif (musculation). Passionné et professionnel."
-      },
-      en: {
-        subtitle: "Choose a contact method — I reply quickly.",
-        about: "I’m <b>Abdellah Bensalem</b>, a computer science student at USTHB, specialized in databases, web developer, and fitness coach. Passionate and professional."
-      },
-      ar: {
-        subtitle: "اختر طريقة للتواصل — أجيب بسرعة.",
-        about: "أنا <b>عبد الله بن سالم</b>، طالب في الإعلام الآلي بجامعة USTHB، مختص في قواعد البيانات، مطور ويب ومدرب كمال أجسام محترف."
-      }
-    };
-
-    langSelect.addEventListener('change', () => {
-      const l = langSelect.value;
-      subtitle.innerHTML = translations[l].subtitle;
-      about.innerHTML = "<strong>À propos de moi :</strong><br>" + translations[l].about;
-    });
+    function toggleInfo() {
+      const info = document.getElementById("apropos");
+      info.style.display = (info.style.display === "block") ? "none" : "block";
+    }
   </script>
 
 </body>
 </html>
+
 
