--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
       margin: 0 auto 15px;
       border: 3px solid #00aaff;
       box-shadow: 0 0 25px #00aaff;
+      cursor: pointer;
+      transition: transform 0.2s ease;
+    }
+
+    /* Animation du "grimace / effet fun" */
+    @keyframes grimace {
+      0%   { transform: scale(1) rotate(0deg); filter: brightness(1); }
+      25%  { transform: scale(1.1) rotate(5deg); filter: brightness(1.2) saturate(1.3); }
+      50%  { transform: scale(0.9) rotate(-5deg); filter: brightness(0.8); }
+      75%  { transform: scale(1.05) rotate(3deg); filter: brightness(1.3); }
+      100% { transform: scale(1) rotate(0deg); filter: brightness(1); }
+    }
+
+    .avatar.animate {
+      animation: grimace 0.6s ease;
     }
 
     h2 {
@@ -108,7 +123,7 @@
 <body>
 
   <div class="card">
-    <div class="avatar"></div>
+    <div class="avatar" id="avatar"></div>
     <h2>Abdellvh Ben</h2>
     <p>Choisissez une méthode — je réponds vite.</p>
 
@@ -129,13 +144,22 @@
   <footer>© 2025 Abdellvh Ben — Tous droits réservés</footer>
 
   <script>
+    // Affiche / masque le texte "À propos"
     function toggleInfo() {
       const info = document.getElementById("apropos");
       info.style.display = (info.style.display === "block") ? "none" : "block";
     }
+
+    // Animation de "grimace" sur l’avatar
+    const avatar = document.getElementById("avatar");
+    avatar.addEventListener("click", () => {
+      avatar.classList.add("animate");
+      setTimeout(() => avatar.classList.remove("animate"), 600);
+    });
   </script>
 
 </body>
 </html>
+
 
 
